2013-12-28  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/kern/emu/misc.c: Remove unused error.h; fixes compilation
	on mingw.

2013-12-28  Colin Watson  <cjwatson@ubuntu.com>

	* NEWS: The cmosclean command in fact dates back to 1.99.  Remove
	mention of it from 2.02.

2013-12-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/cache_armv6.S: Remove .arch directive.

	As these functions are used on pre-ARMv6 CPUs as well we don't want
	to make assembler assume that architecture is higher than default one.

2013-12-27  Colin Watson  <cjwatson@ubuntu.com>

	* NEWS: First draft of 2.02 entry.

2013-12-27  Colin Watson  <cjwatson@ubuntu.com>

	* INSTALL (Cross-compiling the GRUB): Fix some spelling mistakes.
	* docs/grub.texi (Getting the source code): Likewise.

2013-12-25  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/osdep/windows/platform.c (get_platform): Fix EFI
	detection.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Set version to 2.02~beta2.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/efi/efidisk.c (name_devices): Skip Apple ghosts.

2013-12-24  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub-probe.c: Improve help message and simplify list handling.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix buffer overflow in grub_efi_print_device_path.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Show SATA device path.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Revert grub-file usage in grub-mkconfig.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Make newly-created files other than grub.cfg world-readable.

2013-12-24  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub.d/00_header.in: Improve compatibility with old config.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Make rijndael.c respect aliasing rules.

	Trivial backport of dfb4673da8ee52d95e0a62c9f49ca8599943f22e.

2013-12-24  Vladimir Serbinenko  <phcoder@gmail.com>